--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,8 @@ python:
 env:
   matrix:
     - UBUNTU_IMAGE_TAG: bionic
+    - UBUNTU_IMAGE_TAG: xenial
+    - UBUNTU_IMAGE_TAG: trusty
 install:
   - pip install molecule
   - pip install docker
