Drop support for Trusty

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -8,7 +8,8 @@ galaxy_info:
   platforms:
     - name: Ubuntu
       versions:
-        - all
+        - xenial
+        - trusty
   galaxy_tags:
     - mongodb
 dependencies: []
